clusters/production/backup-platform/minio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
  namespace: openshift-adp
spec:
  host: minio-api-openshift-adp.apps-crc.testing
  to:
    kind: Service
    name: minio
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: openshift-adp
spec:
  host: minio-console-openshift-adp.apps-crc.testing
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
